jenkins-kube.yaml
#Create Service Account, Role, and Role Binding
---
#Create Jenkins Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      containers:
        - name: jenkins
          image: trieg/jenkins:1
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-home
          hostPath:
            path: /home/centos/jenkins
          #awsElasticBlockStore:
          #  volumeID: 
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
  namespace: jenkins
spec:
  type: ClusterIP
  ports:
    - port: 50000
      targetPort: 50000
  selector:
    app: jenkins
---
#Create Routing Rules for Jenkins Deployment
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: main-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "a7e43adcc071411ea83e202c223670f5-562580915.us-east-1.elb.amazonaws.com"
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins-vs
spec:
  hosts:
  - "*"
  gateways:
  - "main-gateway"
  http:
  - match:
    - uri:
        prefix: "/jenkins"
    route:
    - destination:
        host: jenkins.jenkins.svc.cluster.local
        port:
          number: 8080
---
